2017-12-26  Mark Wielaard  <mark@klomp.org>

	* libdwP.h (struct Dwarf_Abbrev): Pack struct. Remove attrcnt,
	use bitfields for has_children and code.
	* dwarf_getabbrev.c (__libdw_getabbrev): Don't count attrs.
	* dwarf_getattrcnt.c (dwarf_getattrcnt): Count attrs.

2017-12-26  Mark Wielaard  <mark@klomp.org>

	* memory-access.h (__libdw_get_uleb128_unchecked): New function.
	(get_uleb128_unchecked): New define.
	* dwarf_child.c (__libdw_find_attr): Use get_uleb128_unchecked to
	read attr name and form.
	* dwarf_getabbrevattr.c (dwarf_getabbrevattr): Likewise.
	* dwarf_getattrs.c (dwarf_getattrs): Likewise.
	* dwarf_hasattr.c (dwarf_hasattr): Likewise.

2017-12-28  Mark Wielaard  <mark@klomp.org>

	* dwarf_offdie.c (__libdw_offdie): Check sectiondata exists.

2017-05-09  Ulf Hermann  <ulf.hermann@qt.io>
	    Mark Wielaard  <mark@klomp.org>

	* libdwP.h (__libdw_in_section): Fix check for the upper border of
	the range.
	(__libdw_offset_in_section): Likewise.

2017-12-20  Mark Wielaard  <mark@klomp.org>

	* libdwP.h (struct Dwarf_CU): Add sec_idx field.
	(cu_sec_idx): Return cu->sec_idx.
	* libdw_findcu.c (__libdw_intern_next_unit): Set cu sec_idx to
	IDX_debug_info or IDX_debug_types.
	* dwarf_begin_elf.c (valid_p): Set fake_loc_cu->sec_idx to
	IDX_debug_loc.
	* dwarf_getmacros.c (read_macros): Set fake_cu->sec_idx to
	IDX_debug_macro or IDX_debug_macinfo.

2017-12-12  Mark Wielaard  <mark@klomp.org>

	* dwarf_aggregate_size.c (dwarf_aggregate_size): Don't peel the
	given DIE. Reserve memory for a new DIE first.

2017-12-11  Dima Kogan  <dima@secretsauce.net>

	* dwarf_aggregate_size.c (array_size): Handle multi-dimensional
	arrays properly.

2017-11-03  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (__libdw_intern_expression): Handle
	DW_OP_GNU_variable_value.
	* dwarf_getlocation_attr.c (dwarf_getlocation_attr): Likewise.
	* dwarf_getlocation_die.c (dwarf_getlocation_die): Likewise.

2017-11-03  Mark Wielaard  <mark@klomp.org>
