@@ -1,3 +1,9 @@
+2018-01-14  Petr Machata  <pmachata@gmail.com>
+
+	* testfile-sizes4.o.bz2: New test file.
+	* testfile-sizes4.s: New test source.
+	* run-aggregate-size.sh: Check testfile-sizes4.o v size 257.
+
 2017-12-23  Mark Wielaard  <mark@klomp.org>
 
 	* backtrace-subr.sh (check_native_core): Use a lock file and try
